﻿See https://github.com/MarcusWolschon/osmeditor4android/ for documentation on this version and all changes.

1293: Fix various photo display related issues, update documentation and translations.

1292: Fix issue with chunks in optional preset sections, update presets, translations and opening hours fragment.

1289: Update presets (with lane preset typo fix), documentation improvements.

1288: Enforce maximum length of tags, fix missing backlink for relations, always use dialogs for opening_hours and conditional access, various minor bug fixes and updated presets and translations.

1286: Bump version numbers to make the play store happy.

1282: Improve way reversing code and fix an issue with it, fix problems with lane presets, and a section on areas to documentation.

1281: Increase android version number, updated imagery and translations, avoid loop when applying presets.

1278: Add help for the opening hours editor, update translations.

1277: Update documentation and translations, add presets to most recently used list when added manually. add translated help topics to help browser.

1276: Add collection_times to tags with opening_hours semantics, sort and reverse order of relation members.

1275: Update OH Fragment, add reset address prediction to tools menu.

1274: Fix NPE in address prediction, sort address tags in form.

1273: Updated OF fragment, address prediction improvements.

1272: Updated OH fragment, add warning when trying to add nodes with GPS derived location at Null Island.

1271: Various small action mode improvements, updated OH fragment, make casing width dynamic when rendering ways. 

1270: Initial opening hours editing integration.

1269: Updated preset, support for OSM object timestamps, generate warnings objects potentially out of date and initial support for "check_date" tag

1268: Updated preset and translations, bump build number.

1266: Updated imagery. Disable double clicking when locked.
